[gd_scene load_steps=9 format=3 uid="uid://b1yecosuol5s"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_uyupl"]
[ext_resource type="Texture2D" uid="uid://d11e7dookt23s" path="res://assets/extra/logo-doodle-jump.png" id="2_shirv"]
[ext_resource type="Texture2D" uid="uid://cmdrhjbsoqe68" path="res://assets/extra/btn_play-normal.png" id="3_3thg8"]
[ext_resource type="Texture2D" uid="uid://dcicf1ss8pvx3" path="res://assets/extra/btn_play-pressed.png" id="4_mr7js"]
[ext_resource type="Texture2D" uid="uid://d3s2sn0tmioy0" path="res://assets/extra/btn_quit-normal.png" id="5_hsxem"]
[ext_resource type="Texture2D" uid="uid://b2jhi16bsali6" path="res://assets/extra/btn_quit-pressed.png" id="6_u8swg"]
[ext_resource type="FontFile" uid="uid://duwkkfgiq1w8f" path="res://assets/fonts/Kenney Pixel.ttf" id="7_lexif"]
[ext_resource type="PackedScene" uid="uid://duhsx1gntola" path="res://scenes/bg.tscn" id="8_rvpw1"]

[node name="title_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uyupl")

[node name="main" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -62.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2

[node name="game_title" type="TextureRect" parent="main"]
layout_mode = 2
texture = ExtResource("2_shirv")
expand_mode = 5

[node name="buttons" type="HBoxContainer" parent="main"]
custom_minimum_size = Vector2(0, 70)
layout_direction = 1
layout_mode = 2
alignment = 1

[node name="start_btn" type="TouchScreenButton" parent="main/buttons"]
position = Vector2(56, 9)
texture_normal = ExtResource("3_3thg8")
texture_pressed = ExtResource("4_mr7js")

[node name="exit_btn" type="TouchScreenButton" parent="main/buttons"]
position = Vector2(94, 9)
texture_normal = ExtResource("5_hsxem")
texture_pressed = ExtResource("6_u8swg")

[node name="high_score" type="Label" parent="main"]
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("7_lexif")
text = "High score: "
horizontal_alignment = 1

[node name="BG" parent="main" instance=ExtResource("8_rvpw1")]

[connection signal="pressed" from="main/buttons/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="main/buttons/exit_btn" to="." method="_on_exit_btn_pressed"]
